# tsiAbs

./: CMakeLists.txt  README.md
bisous/tsi/: CMakeLists.txt
bisous/tsi/projet/: mainwindow.cpp  mainwindow.h
projet1/: importutils.cpp  importutils.h  projet1.cpp
